# brightness-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  ecosystem.config.cjs  pyproject.toml  start.sh  usage.db
brightness_monitor/: auth.py  brightness.py  codex_api_provider.py  codex_log_provider.py  config.py  daemon.py  keyboard.py  main.py  providers.py  speech.py  storage.py  usage.py
